--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
 }
 
 .main {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
+  height: 90vh;
+  width: 10vw;
+  margin: 5vh 0;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
